@@ -1,3 +1,6 @@
+[B][COLOR gold]v4.00.10[/COLOR][/B]
+- Make sure we always use English TV show title for scraping
+
 [B][COLOR gold]v4.00.08-9[/COLOR][/B]
 - Added logging functions (on Tools menu):
     View add-on's log
